--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "5.9.55",
     "roboto-fontface": "*",
     "vue": "^3.2.47",
+    "vue3-apexcharts": "^1.4.1",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
