--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "axios": "^1.4.0",
     "roboto-fontface": "*",
     "vue": "^3.2.47",
+    "vue-router": "^4.2.4",
     "vue3-apexcharts": "^1.4.1",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
